--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,9 @@
 <% layout('layouts/boilerplate')%>
 
-<h1>All Campgrounds</h1>
-<div>
-    <a href="/campgrounds/new">Add Campground</a>
-</div>
+<h1 class="mb-4">All Campgrounds</h1>
 <% for (let campground of campgrounds){%>
-<div class="card" mb-3>
-    <div class="row">
+<div class="card mb-3" >
+    <div class="row g-0">
         <div class="col-md-4">
             <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
         </div>
@@ -23,3 +20,8 @@
     </div>
 </div>
 <% }%>
+
+
+
+
+
